--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
 
-  <meta name="apple-mobile-web-app-title" content="mosaic">
+  <meta name="apple-mobile-web-app-title" content="Mosaic">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="msapplication-config" content="/browserconfig.xml">
 
   <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
