--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <a href="https://www.wesleydowling.com" target="_blank">Wesley Dowling</a> <a href="https://www.instagram.com/wesleydowling/" target="_blank" class="fa fa-instagram"></a>
         <p><i>Mosaic</i> is a reactive web-based site-responsive work that was developed during the <a href="https://www.centreforprojectionart.com.au/" target="_blank">Centre for Projection Art</a> Residency Program.  Digital technologies, such as network infrastructure and mobile devices, have brought about redefinitions
           of
-          public space which have now become merged virtual and physical spheres. The work acknowledges this new condition of public space by fusing the virtual windows of the web browser to the physical architecture of the Collingwood Yards building
+          public space which have now become merged virtual and physical spheres. The work acknowledges this new condition of public space by fusing the virtual windows of the web browser to the physical architecture of the building
           through projection.</p>
         <p>The website accumulates the history of the browser window sizes that access the site. The browser window dimensions create stained-glass moving panels that produce an ever-changing generative colour field. The physical site is
           activated by the projection of the shifting composition through the window, and the work will continue to evolve during the exhibition. Viewers can contribute to the work by visiting the website via a desktop or mobile device. Colourful
