--- a/index.html
+++ b/index.html
@@ -99,22 +99,23 @@
 
 
   <div class="animated fadeOut" div id="Intro">
-      <p>[ click/tap to add rectangle ]</p>
+    <p>[ click/tap to add rectangle ]</p>
+  </div>
+
+
+  <div class="content">
+    <div id="myInfo">
+      <a href="https://www.wesleydowling.com" target="_blank">Wesley Dowling</a> <a href="https://www.instagram.com/wesleydowling/" target="_blank" class="fa fa-instagram"></a>
+      <p><i>Mosaic</i> is a reactive web-based site-responsive work that was developed during the <a href="https://www.centreforprojectionart.com.au/" target="_blank">Centre for Projection Art</a> Residency Program. Digital technologies, such as
+        network infrastructure and mobile devices, have brought about redefinitions
+        of
+        public space which have now become merged virtual and physical spheres. The work acknowledges this new condition of public space by fusing the virtual windows of the web browser to the physical architecture of the building
+        through projection.</p>
+      <p>The Mosaic website is an accumulated history of web-browser window dimensions of visitors that interact with the site. Viewers can contribute to the website by scanning the QR code on-site with their mobile device, and then clicking or
+        tapping on-screen. Rectangles created from the visitor's window dimensions will appear simultaneously on-screen and on the projected artwork. The rectangular shapes merge with other visitor's browser windows to form a moving, ever-changing
+        colour field that will evolve during the exhibition.</p>
+      <a href="Privacy_Notice.pdf" download>Privacy</a>
     </div>
-
-
-    <div class="content">
-      <div id="myInfo">
-        <a href="https://www.wesleydowling.com" target="_blank">Wesley Dowling</a> <a href="https://www.instagram.com/wesleydowling/" target="_blank" class="fa fa-instagram"></a>
-        <p><i>Mosaic</i> is a reactive web-based site-responsive work that was developed during the <a href="https://www.centreforprojectionart.com.au/" target="_blank">Centre for Projection Art</a> Residency Program.  Digital technologies, such as network infrastructure and mobile devices, have brought about redefinitions
-          of
-          public space which have now become merged virtual and physical spheres. The work acknowledges this new condition of public space by fusing the virtual windows of the web browser to the physical architecture of the building
-          through projection.</p>
-        <p>The website accumulates the history of the browser window sizes that access the site. The browser window dimensions create stained-glass moving panels that produce an ever-changing generative colour field. The physical site is
-          activated by the projection of the shifting composition through the window, and the work will continue to evolve during the exhibition. Viewers can contribute to the work by visiting the website via a desktop or mobile device. Colourful
-          window panels will appear on-screen and on the projected work in the area where the site visitor clicks or taps.</p>
-        <a href="Privacy_Notice.pdf" download>Privacy</a>
-      </div>
 
 </body>
 
