--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         of
         public space which have now become merged virtual and physical spheres. The work acknowledges this new condition of public space by fusing the virtual windows of the web browser to the physical architecture of the building
         through projection.</p>
-      <p>The <i>Mosaic</i> website is an accumulated history of web-browser window dimensions of visitors that interact with the site. Viewers can contribute to the website by scanning the QR code on-site with their mobile device, and then clicking or
-        tapping on-screen. Rectangles created from the visitor's window dimensions will appear simultaneously on-screen and on the projected artwork. The rectangular shapes merge with other visitor's browser windows to form a moving, ever-changing
-        colour field that will evolve during the exhibition.</p>
+      <p>The <i>Mosaic</i> website is an accumulated history of the window dimensions of web browsers that interact with the site. Viewers can contribute to the work by scanning the QR code on-site with their mobile device, and then clicking or
+        tapping on-screen. Rectangles created from the site visitor's browser dimensions will appear simultaneously on-screen and on the projected artwork. The rectangular shapes merge with other visitor's browser windows to form a moving,
+        ever-changing colour field that will evolve during the exhibition.</p>
       <a href="Privacy_Notice.pdf" download>Privacy</a>
     </div>
 
